# song-battle

./: .gitignore  .mcp.json.example  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.claude/: review-routes.json  settings.json
.claude/agents/: cleanup.md  code-quality-author.md  code-quality-reviewer.md  frontend-author.md  frontend-reviewer.md  kick-provider-reviewer.md  performance-profiler.md  pr-reviewer.md  project-steward.md  realtime-reviewer.md  rust-backend-architect.md  rust-backend-author.md  tauri-security-reviewer.md  test-author.md  testing-reviewer.md  ui-ux-expert.md
.claude/commands/: add-tests.md  cleanup.md  code-quality-fix.md  code-quality-review.md  fix-bug.md  implement-feature.md  prepare-release.md  refactor-module.md  review-frontend.md  review-performance.md  review-rust.md  review-security.md  review-template.md  review.md  update-docs.md
.claude/hooks/: format-on-edit.mjs  graphify-hint.mjs  guard-protected-files.mjs  lessons.mjs  review-gate.mjs  style-policy.mjs
.claude/scratch/: HANDOFF_TEMPLATE.md
.claude/skills/author-contract/: SKILL.md
.claude/skills/code-quality/: SKILL.md
.claude/skills/coding-standards/: SKILL.md
.claude/skills/deployment-rules/: SKILL.md
.claude/skills/docs-standards/: SKILL.md
.claude/skills/frontend-standards/: SKILL.md
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  deny.toml  tauri.conf.json
apps/desktop/src-tauri/src/: error.rs  lib.rs  observability.rs  state.rs
apps/desktop/src-tauri/src/commands/: battle.rs  io.rs  kick.rs  mod.rs  settings.rs  song.rs  tournaments.rs
apps/desktop/src-tauri/src/db/: mod.rs
apps/desktop/src-tauri/src/domain/: battle.rs  bracket.rs  mod.rs  snapshot.rs  song.rs  submit.rs  timer.rs  vote.rs
apps/desktop/src-tauri/src/media/: mod.rs
apps/desktop/src-tauri/src/net/: http.rs  mod.rs
apps/desktop/src-tauri/src/platform/: mod.rs
apps/desktop/src-tauri/src/providers/: kick_official.rs  mod.rs  sim.rs
apps/desktop/src-tauri/src/providers/kick/: mod.rs
apps/desktop/src-tauri/src/server/: mod.rs
apps/overlay/: index.html  package.json  tsconfig.json  vite.config.ts
(+54 files in other folders)
