[package]
name = "desktop"
version = "0.1.0"
description = "Song Battle"
authors = ["Saeed Kolivand"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name unique from the bin (Windows; see rust-lang/cargo#8519).
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
