[package]
name = "desktop"
version = "0.1.0"
description = "Song Battle"
authors = ["Saeed Kolivand"]
edition = "2021"
publish = false

[lib]
# The `_lib` suffix keeps the lib name unique from the bin (Windows; see rust-lang/cargo#8519).
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
async-trait = "0.1"
thiserror = "2"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
url = "2"
sha2 = "0.10"
base64 = "0.22"
rsa = { version = "0.9", features = ["sha2", "pem"] }
